k8s/backend/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: marceloagmelo/java-crud:1.1.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
